RESPONSIVE page contacts

--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -939,9 +939,9 @@ main{
 }
 
 
-/***********************************************************/
-/**********************PAGE CONTACT*************************/
-/***********************************************************/
+/**********************************************************************************************/
+/*********************************PAGE CONTACT*************************************************/
+/**********************************************************************************************/
 
 /*----------------Définition globale de la page------------*/
 #contacts{
@@ -1102,10 +1102,58 @@ main{
     transform: rotate(90deg);
 }
 
+/*-----------------------------------------------*/
+/*------------PAGE CONTACT RESPONSIVE------------*/
+/*-------------------TABLETTE--------------------*/
 
-/***********************************************************/
-/**********************PAGE PRODUITS************************/
-/***********************************************************/
+@media only screen and (max-width: 960px){
+
+    #contacts aside{
+        display: none;
+    }
+
+    #contacts main{
+        text-align: center;
+    }
+
+    #contacts section{
+        width: 90%;
+        margin: auto;
+    }
+
+    #contacts fieldset:nth-of-type(3) figure{
+        width: calc(90% / 4);
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+        margin: 20px 10px;
+    }
+}
+
+/*-----------------------------------------------*/
+/*------------PAGE CONTACT RESPONSIVE------------*/
+/*-------------------TELEPHONE-------------------*/
+
+@media only screen and (max-width: 640px){
+
+    #contacts fieldset:nth-of-type(3) figure{
+        width: calc(90% / 3);
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+        margin: 20px 10px;
+    }
+
+    #contacts fieldset:nth-of-type(3) label{
+        font-size: 12px;
+        font-weight: 500;
+        margin: 0 auto;
+    }
+}
+
+/**********************************************************************************************/
+/**************************************PAGE INFOS**********************************************/
+/**********************************************************************************************/
 
 /*----------------Définition globale de la page------------*/
 #infos{
