--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -1183,6 +1183,8 @@ main{
 }
 
 #infos section ul {
+    padding: 0;
+
     display: inline-block;
 }
 
@@ -1193,7 +1195,7 @@ main{
 }
 
 #infos section div{
-    text-align: center;
+    margin: 0 auto;
 }
 
 #infos section p {
@@ -1242,4 +1244,90 @@ main{
     margin: 0;
     transform: rotate(90deg);
 
+}
+
+/*-----------------------------------------------*/
+/*--------------PAGE INFOS RESPONSIVE------------*/
+/*-------------------TABLETTE--------------------*/
+
+@media only screen and (max-width: 960px) {
+
+    #infos aside {
+        display: none;
+    }
+
+    #infos main{
+        text-align: center;
+    }
+
+    #infos section{
+        width: 90%;
+        margin: auto;
+    }
+
+    #infos section img{
+        width: 180px;
+        height: 180px;
+    }
+
+    #infos section ul {
+        display: inline-block;
+    }
+
+    #infos section li {
+        width: 180px;
+        height: 180px;
+        overflow: hidden;
+    }
+
+    #infos section p {
+        height: 180px;
+        padding: 0 10px;
+        opacity: .8;
+        color: #fff;
+        background: #000;
+        -webkit-transition: margin-top .2s ease-out;
+        -moz-transition: margin-top .2s ease-out;
+        transition: margin-top .2s ease-out;
+    }
+
+    #infos li:hover p {
+        margin-top: -185px;
+        padding-top: 50px;
+    }
+
+    #infos li p strong{
+        text-align: center;
+        font-weight: 900;
+        font-size: 18px;
+        display: block;
+        padding-bottom: 10px;
+        border-bottom: 1px solid white;
+    }
+
+    #infos li p span{
+        padding-top: 10px;
+        display: block;
+        text-align: center;
+    }
+}
+
+/*-----------------------------------------------*/
+/*------------PAGE INFOS RESPONSIVE------------*/
+/*-------------------TELEPHONE-------------------*/
+
+@media only screen and (max-width: 640px) {
+
+    #infos h2{
+        font-size: 20px;
+    }
+
+    #infos section div ul{
+        display: block !important;
+    }
+
+    #infos section div li{
+        margin:0 auto;
+        text-align: center;
+    }
 }
