--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -795,7 +795,7 @@ footer > nav > ul:nth-of-type(2) li{
     margin: -95% 0 -20% 1000px;
     font-size: 130px;
     transform: rotate(90deg);
-    font-family: "bangers";
+
 
 
 }
@@ -923,6 +923,7 @@ footer > nav > ul:nth-of-type(2) li{
 
 #details>section>article>p{
     font-size: 120%;
+
 }
 
 #details>section>figure{
@@ -930,7 +931,7 @@ footer > nav > ul:nth-of-type(2) li{
     display: inline-block;
 }
 
-#luch-info>section>article>p{
+#details>section>article>p{
     font-family: bangers;
 
 }
