--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -1008,6 +1008,7 @@ footer > nav > ul:nth-of-type(2) li{
 
     #details>section>article>p{
         font-size: 120%;
+        margin-left: 30px;
 
     }
 
