--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -791,9 +791,10 @@ footer > nav > ul:nth-of-type(2) li{
     display: inline-block;
     vertical-align: top;
     width: 10%;
-    margin: -95% 0 -20% 1000px;
+    margin: -110% 0 -20% 1000px;
     font-size: 130px;
     transform: rotate(90deg);
+    font-family: "bangers";
 
 
 
