--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -253,7 +253,6 @@ footer > nav > ul:nth-of-type(2) li{
     background: url("../image/background-index.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: auto;
 
 
 
@@ -398,6 +397,7 @@ footer > nav > ul:nth-of-type(2) li{
     background: black;
     position: absolute;
 }
+
 
 /* notre boutton play*/
 .video-playbutton-layer {
@@ -591,12 +591,14 @@ footer > nav > ul:nth-of-type(2) li{
     font-size: 100%;
     min-height: 100%;
     line-height: 1.45;
+    background-image: url('../image/background-events_V2.jpg');
 }
 
 #Events main {
     margin: 0 auto;
-    width: 90%;
+    width: 80%;
     max-width: 1200px;
+    margin-left: 20%;
 }
 
 #Events .group:after {
@@ -612,6 +614,7 @@ footer > nav > ul:nth-of-type(2) li{
     position: relative;
     text-align: center;
     transition: all .2s ease-in-out;
+    color: deeppink;
 }
 @media only screen and (min-width: 640px) {
     #Events table {
@@ -657,7 +660,15 @@ footer > nav > ul:nth-of-type(2) li{
     box-shadow: 0px 0px 10px 0px #323232;
     transform: scale(1.025);
     z-index: 2;
+    color: white;
 }
+ #events table p{
+     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2c539e+0,2c539e+100;Blue+3D+%232 */
+     background: #2c539e; /* Old browsers */
+     background: radial-gradient(ellipse at center,  #2c539e 0%,#2c539e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2c539e', endColorstr='#2c539e',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+ }
 #Events table:hover:before, table:hover:after {
     content: "";
     position: absolute;
@@ -745,7 +756,7 @@ footer > nav > ul:nth-of-type(2) li{
     background: url("../image/background-lutteurs.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 100%;
 }
 
 #luchador{
@@ -1061,7 +1072,7 @@ footer > nav > ul:nth-of-type(2) li{
 #contacts{
     background-image: url("../image/background-contact.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 
 /*-----------------------SECTION--------------------*/
@@ -1273,7 +1284,7 @@ footer > nav > ul:nth-of-type(2) li{
 #infos{
     background-image: url("../image/background-forfaitst.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 
 /*-----------------------SECTION--------------------*/
