--- a/Css/MainCss.css
+++ b/Css/MainCss.css
@@ -159,16 +159,12 @@ footer nav li {
 
 /*on espace les elements du menu bas de page*/
 footer nav li a {
-    padding-left: 30px;
-    padding-right: 30px;
     color: #ee3826;
     text-decoration: none;
     font-family: "bangers";
 }
 
 footer nav li a:hover {
-    padding-left: 30px;
-    padding-right: 30px;
     color: #17bcb6;
     text-decoration: none;
 }
@@ -189,8 +185,8 @@ footer nav > div p{
 footer > nav > ul:nth-of-type(2){
     width: 150px;
     bottom:0;
-    margin: 0 10% 0 10% ;
-    padding: 0;
+    margin: 0 0 0 10% ;
+    padding-left: 10px;
     border-left: 1px solid #ee3826;
     display: inline-block;
     vertical-align: top;
@@ -218,7 +214,7 @@ footer > nav > ul:nth-of-type(2) li{
 
     footer > nav > ul:nth-of-type(2){
         width: 100px;
-        text-align: left;
+        text-align: center;
         margin: 0 5% 0 2% ;
     }
 
@@ -235,11 +231,18 @@ footer > nav > ul:nth-of-type(2) li{
 
 /*-----------------------------------------------*/
 /*------------MENU FOOTER RESPONSIVE-------------*/
-/*--------------------TELEPHONE-------------------*/
+/*-------------------TELEPHONE-------------------*/
 
 @media only screen and (max-width: 640px) {
 
+    footer nav ul{
+        margin: 0;
+        width: 30%;
+    }
 
+    footer nav div{
+        width: 30%;
+    }
 
 }
 
